2011-10-22  lianweidong  <weidong.lian@gmail.com>

 	* add lian-examples where I just put some examples and template I collected from internet. Thanks a lot for the contribution of Damiano Varagnolo.

2011-10-18  lianweidong  <weidong.lian@gmail.com>

	* add lian-dot-lyx/scripts/ matlab2tikz to convert matlab fig to tikz format. and tikz can gain many advantages and define animations in beamer presentation. google it for more details.

2011-10-14  lianweidong  <weidong.lian@gmail.com>

	* modify lian-template/lyx/thesis/, now a new version is released.

2011-07-09  lianweidong  <weidong.lian@gmail.com>

	* add lian-template/lyx/thesis/README, introducing how to use thesis template

2011-06-24  lianweidong  <weidong.lian@gmail.com>

	* add lian-template that stores the templates for various documents, lyx, latex for chinese.

2011-06-20  lianweidong  <weidong.lian@gmail.com>

	* add font setting in my.emacs
	* add an template for organizing your thesis in lian-dot-lyx/template/Thesis.











 