@@ -1,6 +1,6 @@
 ;; -*- Emacs-Lisp -*-
 
-;; Time-stamp: <2011-11-29 15:25:04 Tuesday by lian>
+;; Time-stamp: <2011-12-30 16:12:57 Friday by lian>
 
 ;; This file is free software; you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
@@ -37,11 +37,13 @@
 (eal-define-keys-commonly
  global-map
  `(("C-M-j"     goto-line)
-   ("C-x F"     find-dired)
    ;; ("C-u"       cua-scroll-down)
    ("<f9>"      kill-this-buffer)
    ;; ("<f8>"      other-frame)
-   ("<f8>"      sb-toggle-keep-buffer)))
+   ;; ("<f8>"      sb-toggle-keep-buffer)
+   ("<f8>"      recompile)
+   ("C-x F"     find-dired)))
+
 ;; (global-set-key (kbd "<f8>") 'sb-toggle-keep-buffer)
 
 
@@ -109,11 +111,11 @@
     ("C-j b" ido-switch-buffer)
     ("C-j C-f" ido-find-file)
     ("C-j f" emaci-mode-toggle)
-    ;; ("C-j C-j" execute-extended-command)
-    ("C-j C-j" emaci-mode-toggle)
+    ("C-j C-j" execute-extended-command)
+    ;; ("C-j j" execute-extended-command)
+    ;; ("C-j C-j" emaci-mode-toggle)
     ("C-j C-v" svn-status)
     ;; ("C-j j" goto-line)
-    ("C-j j" execute-extended-command)
     ("C-j C-o" delete-blank-lines)
     ("C-j l" other-frame)
     ("C-j C-l" make-frame-command)
