@@ -1,11 +1,11 @@
-COMPUTATIONAL MECHANICS = COMPUT MECH
-COMPUTER METHODS IN APPLIED MECHANICS AND ENGINEERING = COMPUT METHOD APPL M
+Computational Mechanics = Comput Mech
+Computer Methods in Applied Mechanics and Engineering = Comput Method Appl M
 Composites Science and Technology = Compos Sci Technol
-ENGINEERING FRACTURE MECHANICS = ENG FRACT MECH
-International Journal of Computer Vision = INT J COMPUT VISION
-International Journal of Solids and Structures = INT J SOLIDS STRUCT
-MATERIALS SCIENCE AND ENGINEERING A = MAT SCI ENG A-STRUCT
-MATERIALS SCIENCE AND ENGINEERING B = MAT SCI ENG B-SOLID
-MEDICAL ENGINEERING & PHYSICS = MED ENG PHYS
+Engineering Fracture Mechanics = Eng Fract Mech
+International Journal of Computer Vision = Int J Comput Vision
+International Journal of Solids and Structures = Int J Solids Struct
+Materials Science and Engineering A = Mat Sci Eng A-Struct
+Materials Science and Engineering B = Mat Sci Eng B-Solid
+Medical Engineering & Physics = Med Eng Phys
 Materials Today = Mater Today
-TRENDS IN FOOD SCIENCE & TECHNOLOGY = TRENDS FOOD SCI TECH
+Trends in Food Science & Technology = Trends Food Sci Tech
